    - parsing support several new class attributes
    - verbose output shows classes in sorted order

version 0.3.1:
    - added a few examples
    - fixed broken links in docs
    - fixed output omission in non-forked ant task

version 0.3:
    - Macker now detects API-only accesses of other classes
    - rulesets now support input class subsetting
    - access rules now support custom error messages
    - Ant task supports custom classpath without forking
    - vast performance improvements through better regex caching
    - much-improved API for calling Macker from Java
    - addReachableClasses supports dynamic primary class detection
    - Macker now won't stop after the first ruleset that fails
    - bug fix for vars containing other vars
    - added void to primitive types (now necessary b/c of API parsing)
    - numerous output formatting tweaks (getting readable!)

version 0.2:
    - Macker really works
    
version 0.1:
    - Macker sorta works

version 0.0:
    - Macker doesn't work

___________________________

Sketch of future versions:

0.4 filtering on attributes other than name
0.5 forall / exists rules
0.6 method-based matching
0.? META-INF